--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,6 +88,7 @@ code {
 }
 
 .highlight>pre.codehilite>code {
+  color: #c9d1d9;
   background-color: transparent;
   padding: 0;
   border-radius: 0;
