--- a/docs/app/assets/tailwind/application.css
+++ b/docs/app/assets/tailwind/application.css
@@ -1,3 +1,19 @@
 @config "../../../tailwind.config.js";
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
+
+article.prose {
+  @apply max-w-[800px];
+}
+
+article.prose code:not(pre.codehilite > code) {
+  @apply bg-zinc-200 px-2 py-0.5 rounded-lg;
+}
+
+article.prose code::before {
+  @apply content-none;
+}
+
+article.prose code::after {
+  @apply content-none;
+}
