--- a/docs/app/assets/tailwind/application.css
+++ b/docs/app/assets/tailwind/application.css
@@ -2,10 +2,6 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
 
-article.prose {
-  @apply max-w-[800px];
-}
-
 article.prose code:not(pre.codehilite > code) {
   @apply bg-zinc-200 px-2 py-0.5 rounded-lg;
 }
@@ -16,4 +12,8 @@ article.prose code::before {
 
 article.prose code::after {
   @apply content-none;
+}
+
+div.highlight {
+  @apply bg-[#1D2939] rounded-lg;
 }
